# nuevo-proyecto

./: .env.example  .env.production  .gitignore  .secrets.baseline  COMPLETE_STATUS.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PHASES_2_3_4.md  INICIAR_APP.bat  PENDIENTE_SCRAPERS.md  PHASE_4_COMPLETE.md  PHASE_A_PROGRESS.md  PHASE_A_QUICK_START.sh  PUNTO_DE_DETENCION.md  QUICK_START.md  QUICK_START_PHASE4.sh  README.md  TIMELINE.md  _diag.py  alembic.ini  alertmanager.yml  alerts.yml  build.bat  docker-compose.monitoring.yml  docker-compose.standalone.yml  docker-compose.yml  launcher.py  load_test.js  prometheus.yml  pyproject.toml  radar_precios.spec  requirements.txt  run.sh  start.bat  stop.bat  test_apis.py  test_client_simple.py  test_client_simulation.py  test_graphql2.py  (+9 more)
.claude/: settings.json
.github/workflows/: deploy.yml  docker.yml  tests.yml
backend/: alerts.py  auth.py  backup.py  basket_service.py  catalog_indexer.py  celery_app.py  compliance.py  config.py  db.py  db_models.py  email_utils.py  exception_handlers.py  health_check.py  logging_config.py  logging_setup.py  main.py  metrics.py  middleware.py  models.py  models_auth.py  models_baskets.py  models_variants.py  parser.py  parser_monitor.py  product_variants_service.py  rate_limiter.py  repositories.py  request_context.py  scraper.py  scraper_jumbo.py  search_service.py  security.py  shopping_list_service.py  status_dashboard.py  store_adapters.py  tasks.py
backend/api/: search_endpoints.py
backend/api/routes/: search.py
backend/application/use_cases/: __init__.py  compare_prices.py  normalize_product.py  search_products.py
backend/domain/: __init__.py  constants.py  price.py  product.py  store.py
backend/domain/normalization/: __init__.py  matching.py  text.py  units.py
backend/infrastructure/: __init__.py  http_client.py
backend/infrastructure/cache/: cache.py
backend/infrastructure/db/: models.py  repositories.py
backend/infrastructure/scrapers/: __init__.py  acuenta.py  base.py  lider.py  santa_isabel.py  tottus.py  unimarc.py
backend/tasks/: __init__.py  celery_app.py  scrape_tasks.py
backend/tests/: __init__.py  test_antibot_client.py  test_product_variants.py  test_proxy_manager.py
docs-archive/: PHASE_A_ARCHITECTURE.md  PHASE_A_COMPLETE.md  STATUS_FINAL.md
frontend/: app.js  index.html  next.config.mjs  package-lock.json  package.json  style.css  tailwind.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
frontend/src/app/admin/: page.tsx
frontend/src/app/baskets/: page.tsx
frontend/src/app/product/: page.tsx  product-detail-client.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: async-boundary.tsx  error-boundary.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  separator.tsx  spinner.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: use-scraper-health.ts  use-search-products.ts  use-shopping-list.ts
frontend/src/layouts/: app-layout.tsx
frontend/src/lib/: design-tokens.ts  utils.ts
frontend/src/services/: api-client.test.ts  api-client.ts
frontend/src/stores/: use-app-store.ts
frontend/src/types/: api.ts
grafana/dashboards/: radar-overview.json
grafana/provisioning/dashboards/: dashboards.yml
migrations/: env.py
migrations/versions/: 20260428_0001_initial_persistence.py  20260429_0002_domain_catalog.py  20260525_0003_add_user_role.py  20260528_0004_consolidate_orm_layers.py  20260529_0005_add_user_verification.py  20260530_0005_add_is_verified_to_users.py
nginx/: nginx.conf
tests/: conftest.py  test_acceptance.py  test_api.py  test_api_search_route.py  test_async_scraper.py  test_auth_hardening.py  test_catalog_pagination.py  test_fixes.py  test_infrastructure_cache.py  test_infrastructure_repositories.py  test_integration_price_flow.py  test_lider_parser.py  test_normalization.py  test_parser.py  test_persistence.py  test_scraper.py  test_search_service.py  test_security.py  test_shopping_list_service.py
tests/fixtures/: lider_leche.html  lider_search_leche.html
(+12 files in other folders)
