[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-precios"
version = "0.1.0"
description = "Comparador de precios de supermercados chilenos"
authors = [
    {name = "Desarrollador", email = "dev@example.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.3.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.17.0",
    "boto3>=1.26.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "sentry-sdk[fastapi,sqlalchemy]>=1.30.0",
    "python-json-logger>=2.0.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "black>=24.0.0",
    "flake8>=7.0.0"
]

[tool.setuptools]
packages = [
    "backend",
    "backend.api",
    "backend.api.routes",
    "backend.application",
    "backend.application.use_cases",
    "backend.domain",
    "backend.domain.normalization",
    "backend.infrastructure",
    "backend.infrastructure.cache",
    "backend.infrastructure.db",
    "backend.infrastructure.scrapers",
    "backend.tasks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
